2009-04-10 - 1.0-alpha-4
- Fixed problem caused by window resize event binding hanging around after calendar is removed from the DOM.
- Wasn't returning a reference to the original jquery plugin object so chaining wasn't possible
- Added calendarPreLoad and calendarPostLoad events that are called before and after events get loaded into the calendar.
- Removed calendarRendered event as it was superseded by the calendarPostLoad event
- Fixed bug in calendar scrolling to hour of day.
- Added scrollToHourMillis config option for setting the duration of the scroll to hour of day animation. 
- Fixed problem where the newEvent event was triggered multiple times after navigating through weeks.
- Fixed problem where dragging an event caused an event click to be triggered on drop instead of a dropped event.
- Fixed issue in IE7 where width of calendar was not taking into account the width of the vertical scrollbar, causing a horizontal scrollbar to appear

2009-04-07 - 1.0-alpha-3 

- Tightened up some of the rendering to cater to different configuration.
- Added timeslotHeight config property so you can can specify the height of calendar time slots.
- Fixed problem where resizing an event causes a new event to be created  
- Fixed problem with click event  for calendar events firing twice.


2009-04-06 - 1.0-alpha-2
 - Removed jQuery UI Theme from source in favour of google hosted theme
 - Fixed bug with parsing dates in events supplied as milliseconds
 - Added minified and yui compressed versions of javascript
 - Fixed bug where current day remained highlighted after navigating to next / prev weeks


2009-04-05 - 1.0-alpha-1
 - Initial Release